Relocate classes and constants, optimize parsing and printing, add benchmarks